--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 			outer space and not hover kind of on the edge of it. Well sit back, and relax 
 			because we’ll give you a truly out of this world experience!</p>
 		</div>
+ <that
 
 	  <span>Explore</span>
 	  
